# AHPy

./: LICENSE  README.md  ahpy.py  examples.py  pyproject.toml  pytest.ini  setup.py
ahpy/: __init__.py  ahp_data.py  ahpy.py  examples.py  test_ahp.py
src/ahpy/: __init__.py  ahpy.py
tests/: examples.py  test_ahp.py  test_ahp_data.py
